[package]
name = "crdts"
description = "Practical serializable thoroughly tested CRDTs (ORSWOT, counters, LWW) ported from riak_dt"
version = "1.3.0"
authors = ["Tyler Neely <t@jujit.su>"]
license = "Apache-2.0"
homepage = "https://github.com/spacejam/rust-crdt"
repository = "https://github.com/spacejam/rust-crdt"
documentation = "http://spacejam.github.io/docs/crdts/crdts/"
keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock", "riak"]

[[test]]

name = "test"
path = "test/test.rs"

[dependencies]
bincode = "0.9"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
maplit = "0.1.3"
quickcheck = "0.6.2"
rand = "0.4"
