[package]
name = "crdts"
description = "Practical serializable thoroughly tested CRDTs (ORSWOT, counters, LWW) ported from riak_dt"
version = "3.0.0"
authors = ["Tyler Neely <t@jujit.su>", "David Rusu <davidrusu.me@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-crdt/rust-crdt"
repository = "https://github.com/rust-crdt/rust-crdt"
documentation = "http://rust-crdt.github.io/rust-crdt/docs/crdts/crdts/"
keywords = ["crdt", "data-structures", "distributed-systems", "vector-clock", "riak"]
edition = "2018"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
num-bigint = "0.2.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "0.6.2"
rand = "0.4"

[profile.release]
debug = true